# Skolinspektionen-open-data

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: refresh-data.yml  scrape.yml  test.yml
api/: index.json  latest_updated.json
api/.cache/: 13acf8382521a594.json  3d2283b0c41e2553.json  6bf473a407b18ce8.json  6cd5d878a67ae5c2.json  6e36f343d1bb1f8e.json  76e67e071bf91d20.json  77af434c5e860469.json  8003bd3db32c1701.json  908d38a1183eb8f6.json  9b9af6fa2e1eb83d.json  b6385a8487198092.json  c3f11feda75677d9.json  dc5d48b3577d98d1.json  f52817f3f559720c.json
scripts/: fix-lint.sh  refresh_data.py
src/: __init__.py  config.py
src/cli/: __init__.py  refresh.py
src/mcp/: __init__.py  server.py  validation.py
src/search/: __init__.py  ranker.py
src/services/: __init__.py  browser.py  cache.py  delta.py  fetcher.py  kolada.py  models.py  ombedomning.py  parser.py  rate_limiter.py  refresher.py  retry.py  scraper.py  skolenkaten.py  tillstand.py  tillsyn_statistik.py
tests/: __init__.py  conftest.py  test_imports.py
tests/mcp/: __init__.py  test_server.py  test_tools.py
tests/unit/: test_browser.py  test_cache.py  test_config.py  test_delta.py  test_models.py  test_parser.py  test_rate_limiter.py  test_retry.py  test_scraper.py  test_search.py
