[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skolinspektionen-data"
version = "0.1.0"
description = "Open data from Skolinspektionen (Swedish Schools Inspectorate) via MCP"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.11"
authors = [
    { name = "Civic Tech Sweden" }
]
keywords = ["skolinspektionen", "open-data", "mcp", "sweden", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "aiofiles>=24.0.0",
    "rapidfuzz>=3.0.0",
    "rank-bm25>=0.2.2",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
scraper = [
    "camoufox[geoip]>=0.4.0",
    "playwright>=1.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
]

[project.scripts]
si-scrape = "src.services.scraper:main"
si-mcp = "src.mcp.server:main"
si-refresh = "src.cli.refresh:cli_main"

[project.urls]
Homepage = "https://github.com/civictechsweden/skolinspektionen-data"
Repository = "https://github.com/civictechsweden/skolinspektionen-data"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Ignore line-too-long - many tool descriptions exceed 100 chars

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
